--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $white: #fff;
 $black: #000000;
 $forest-green: #134e13;
 $divider-color: rgb(212, 212, 212);
+$navbar-menu: rgb(27, 27, 27);
 
 
 // Text
