--- a/src/scss/components/_navbar-menu.scss
+++ b/src/scss/components/_navbar-menu.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgb(27, 27, 27);
+    background-color: $navbar-menu;
     z-index: 99;
 
     .container {
