--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -44,6 +44,12 @@
         @media (max-width: $layout-breakpoint-small) {
           display: none;
         }
+
+        &a:hover {
+          .cursor {
+            background-color: red;
+          }
+        }
       }
     }
   }
