--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -52,15 +52,57 @@ $card-spacing: 2vw;
                             right: 2em;
                             top: 2em;
                             z-index: 10;
+                            display: table;
+                            text-align: center;
+
                             .dot {
                                 transition: 0.5s ease-in-out;
+                                color: rgb(59, 59, 59);
+                                font-size: calc(clamp(3.5rem, 5vw, 6.5rem) * 0.875);
+                                // animation-duration: 1.5s;
+                                // animation-iteration-count: infinite;
+                                fill: red;
+                                transition: all 0.8s ease-out 0s;
+                                stroke-width: 10px;
+                            }
+
+                            span {
+                                letter-spacing: 1px;
+                                text-transform: uppercase;
+                                font-weight: 700;
                                 color: $white;
-                                mix-blend-mode: difference;
-                                font-size: 2rem;
-                                animation-duration: 1.5s;
-                                animation-iteration-count: infinite;
+                                position: relative;
+                                display: table-cell;
+                                vertical-align: middle;
+                                margin: 0 auto;
+                                font-size: 1rem;
                             }
                         }
+
+                        // .album-cover-dot {
+                        //     border-radius: 50%;
+                        //     background-color: rgb(59, 59, 59);
+                        //     width: 50px;
+                        //     height: 50px;
+                        //     position: absolute;
+                        //     right: 2em;
+                        //     top: 2em;
+                        //     z-index: 10;
+                        //     display: table;
+                        //     text-align: center;
+
+                        //     span {
+                        //         letter-spacing: 1px;
+                        //         text-transform: uppercase;
+                        //         font-weight: 700;
+                        //         color: $white;
+                        //         position: relative;
+                        //         display: table-cell;
+                        //         vertical-align: middle;
+                        //         margin: 0 auto;
+                        //         font-size: 1rem;
+                        //     }
+                        // }
                         .image-container {
                             transform: translateZ(1px);
 
@@ -117,5 +159,24 @@ $card-spacing: 2vw;
     }
     100% {
         transform: scale(1);
+    }
+}
+
+@keyframes borderColor {
+    0% {
+        border-bottom-color: #60daaa;
+        border-left-color: #60daaa;
+    }
+    50% {
+        border-bottom-color: #60daaa;
+        border-left-color: #60daaa;
+    }
+    51% {
+        border-bottom-color: transparent;
+        border-left-color: transparent;
+    }
+    100% {
+        border-bottom-color: transparent;
+        border-left-color: transparent;
     }
 }
