--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -36,9 +36,9 @@ $card-spacing: 2vw;
                         position: relative;
 
                         &:hover {
-                            .dot {
-                                animation-name: dot-pulse;
-                                animation-timing-function: ease;
+                            #dot-stroke {
+                                animation: firstAnimation 0.5s linear forwards;
+                                // animation: fadeIn 0.75s linear forwards;
                             }
 
                             .album-cover {
@@ -83,21 +83,36 @@ $card-spacing: 2vw;
                         // }
 
                         .album-cover-dot {
-                            border-radius: 50%;
                             position: absolute;
                             right: 2em;
                             top: 2em;
                             z-index: 10;
-                            display: table;
-                            text-align: center;
-                            background-color: rgb(59, 59, 59);
+                            // display: table;
 
-                            width: calc(clamp(3.5rem, 5vw, 6rem) * 0.875);
-                            height: calc(clamp(3.5rem, 5vw, 6rem) * 0.875);
+                            .dot {
+                                transition: 0.5s ease-in-out;
+                                color: rgb(59, 59, 59);
+                                font-size: calc(clamp(3.5rem, 5vw, 6rem) * 0.875);
+                                transition: all 0.8s ease-out 0s;
+                                -webkit-transform: rotate(-90deg);
+                                -ms-transform: rotate(-90deg);
+                                transform: rotate(-90deg);
+                                stroke: white;
+                                stroke-width: 30px;
+
+                                stroke-dasharray: 2000;
+                                stroke-dashoffset: 2000;
+                                stroke-opacity: 0;
+                                pointer-events: none;
+                            }
 
                             .album-cover-dot-text {
-                                display: table-cell;
-                                vertical-align: middle;
+                                // display: table-cell;
+                                // vertical-align: middle;
+                                right: 1em;
+                                top: 2.2em;
+                                position: absolute;
+                                z-index: 11;
                                 letter-spacing: 1px;
                                 text-transform: uppercase;
                                 font-weight: 700;
@@ -105,6 +120,23 @@ $card-spacing: 2vw;
                                 font-size: 1rem;
                             }
                         }
+
+                        // .album-cover-dot {
+                        //     border-radius: 50%;
+                        //     position: absolute;
+                        //     right: 2em;
+                        //     top: 2em;
+                        //     z-index: 10;
+                        //     display: table;
+                        //     text-align: center;
+                        //     background-color: rgb(59, 59, 59);
+
+                        //     width: calc(clamp(3.5rem, 5vw, 6rem) * 0.875);
+                        //     height: calc(clamp(3.5rem, 5vw, 6rem) * 0.875);
+
+
+                        // }
+
                         .image-container {
                             transform: translateZ(1px);
 
@@ -146,39 +178,15 @@ $card-spacing: 2vw;
     }
 }
 
-@keyframes dot-pulse {
-    0% {
-        transform: scale(1);
-    }
-    25% {
-        transform: scale(1.3);
-    }
-    50% {
-        transform: scale(1.15);
-    }
-    75% {
-        transform: scale(1.3);
-    }
-    100% {
-        transform: scale(1);
+@keyframes firstAnimation {
+    to {
+        stroke-dashoffset: 0;
+        stroke-opacity: 1;
     }
 }
 
-@keyframes borderColor {
-    0% {
-        border-bottom-color: #60daaa;
-        border-left-color: #60daaa;
-    }
-    50% {
-        border-bottom-color: #60daaa;
-        border-left-color: #60daaa;
-    }
-    51% {
-        border-bottom-color: transparent;
-        border-left-color: transparent;
-    }
-    100% {
-        border-bottom-color: transparent;
-        border-left-color: transparent;
-    }
+@keyframes fadeIn {
+	to {
+		stroke-opacity: 1;
+	}
 }
