navbar menu changes, maybe fill up empty space in menu

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -20,9 +20,9 @@ $black-text-hover: rgb(107, 107, 107);
 
 
 //Wrapper
-$wrapper-value: 15vw;
+$wrapper-value: 17vw;
 $wrapper-value-breakpoint-small: 8vw;
-$wrapper-value-menu: 7vw;
+$wrapper-value-navbar: 7vw;
 
 
 //Padding values
